--- a/GetNinjas Mobile Test/View/Subview/InfoDetailsTableViewCell.xib
+++ b/GetNinjas Mobile Test/View/Subview/InfoDetailsTableViewCell.xib
@@ -4,64 +4,74 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="114" id="KGk-i7-Jjw" customClass="InfoDetailsTableViewCell" customModule="GetNinjas_Mobile_Test" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="379" height="114"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="134" id="KGk-i7-Jjw" customClass="InfoDetailsTableViewCell" customModule="GetNinjas_Mobile_Test" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="379" height="134"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="379" height="114"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="379" height="134"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="WJ7-Pw-4gs" userLabel="Address Stack View">
-                        <rect key="frame" x="20" y="0.0" width="339" height="60"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o3n-EU-Zuu" userLabel="Container View">
+                        <rect key="frame" x="20" y="0.0" width="339" height="134"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="750" verticalHuggingPriority="251" image="info.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="0J8-zZ-Kbj" userLabel="Info Icon">
-                                <rect key="frame" x="0.0" y="20.5" width="24" height="19"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="24" id="Exv-lY-ZnV"/>
-                                </constraints>
-                            </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="E9D-eA-eDp">
-                                <rect key="frame" x="34" y="0.0" width="305" height="110"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="WJ7-Pw-4gs" userLabel="Address Stack View">
+                                <rect key="frame" x="8" y="8" width="323" height="118"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ebc-e1-zSM" userLabel="Info Label">
-                                        <rect key="frame" x="0.0" y="0.0" width="305" height="60"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="750" verticalHuggingPriority="251" image="info.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="0J8-zZ-Kbj" userLabel="Info Icon">
+                                        <rect key="frame" x="0.0" y="49.5" width="24" height="19"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="60" id="c8f-Iz-2UE"/>
+                                            <constraint firstAttribute="width" constant="24" id="Exv-lY-ZnV"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jQi-hq-PXM" userLabel="Value Label">
-                                        <rect key="frame" x="0.0" y="60" width="305" height="50"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="g5Q-hz-dGX"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="E9D-eA-eDp">
+                                        <rect key="frame" x="34" y="27" width="289" height="64"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ebc-e1-zSM" userLabel="Info Label">
+                                                <rect key="frame" x="0.0" y="0.0" width="289" height="27"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="27" id="KNv-eS-HYO"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jQi-hq-PXM" userLabel="Value Label">
+                                                <rect key="frame" x="0.0" y="37" width="289" height="27"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="27" id="qGI-Va-nVA"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </stackView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="60" id="SkC-MQ-ft3"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="WJ7-Pw-4gs" secondAttribute="bottom" id="MCO-BS-LrY"/>
+                            <constraint firstItem="WJ7-Pw-4gs" firstAttribute="top" secondItem="o3n-EU-Zuu" secondAttribute="topMargin" id="Zux-7O-nS5"/>
+                            <constraint firstItem="WJ7-Pw-4gs" firstAttribute="leading" secondItem="o3n-EU-Zuu" secondAttribute="leadingMargin" id="pa5-cE-ZQG"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="WJ7-Pw-4gs" secondAttribute="trailing" id="pto-9g-OCL"/>
                         </constraints>
-                    </stackView>
+                    </view>
                 </subviews>
                 <color key="backgroundColor" red="0.18431372549019609" green="0.58431372549019611" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
-                    <constraint firstItem="WJ7-Pw-4gs" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="AtX-jc-gZE"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="WJ7-Pw-4gs" secondAttribute="trailing" id="B0r-rE-dbK"/>
-                    <constraint firstItem="WJ7-Pw-4gs" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="P3d-P5-clf"/>
-                    <constraint firstAttribute="bottom" secondItem="WJ7-Pw-4gs" secondAttribute="bottom" id="vp2-U3-Y7Y"/>
+                    <constraint firstAttribute="bottom" secondItem="o3n-EU-Zuu" secondAttribute="bottom" id="1Ez-J2-0ND"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="o3n-EU-Zuu" secondAttribute="trailing" id="Mss-Mr-WKq"/>
+                    <constraint firstItem="o3n-EU-Zuu" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="QCD-Kx-O1W"/>
+                    <constraint firstItem="o3n-EU-Zuu" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="lHG-E7-FVU"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -70,10 +80,13 @@
                 <outlet property="infoLabel" destination="Ebc-e1-zSM" id="8Zx-Yp-F05"/>
                 <outlet property="valueLabel" destination="jQi-hq-PXM" id="7LW-w9-T99"/>
             </connections>
-            <point key="canvasLocation" x="-312.31884057971018" y="121.20535714285714"/>
+            <point key="canvasLocation" x="-263.04347826086956" y="98.4375"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="info.circle.fill" catalog="system" width="128" height="121"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
